fixed playhead not visible on iPad

--- a/skins/default/css/layout.css
+++ b/skins/default/css/layout.css
@@ -76,20 +76,6 @@
 	top: 0; left: 0;
 	height: 100%;
 }
-.scrubber .ui-slider-handle {
-	z-index: 4; 
-	position: absolute;
-	left: 0; 
-	top: -0.24em !important;
-	width: 0 !important;
-	height: 0 !important;
-	border-radius: 50%;
-	border: 8px solid #dadada;
-	cursor: pointer;
-	-webkit-transition-property:width, height, border;
-	-webkit-transition-duration: 0.2s, 0.2s, 0.2s;   
-	-webkit-transition-timing-function: ease-in-out,ease-in-out, ease-in-out; 
-}
 .scrubber .arrow {
     position: absolute;
     left: 48px;
@@ -100,20 +86,31 @@
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
 }
-.player-out .hover .playHead .ui-slider-handle, .player-out.play-state .playHead .ui-slider-handle {
-	width: 0 !important; height: 0 !important;
-	margin-left: 0px !important;
-    overflow: hidden;
-    -webkit-transform: scale(1, 1);
+.scrubber .playHead {
+	z-index: 3; 
+	position: absolute;
+	left: 0; 
+	top: -0.24em !important;
+	width: 0 !important;
+	height: 0 !important;
+	border-radius: 50%;
+	border: 8px solid #dadada;
+	cursor: pointer;
+	overflow: hidden;
+	/*
+	-webkit-transition-property:width, height, border;
+	-webkit-transition-duration: 0.2s, 0.2s, 0.2s;   
+	-webkit-transition-timing-function: ease-in-out,ease-in-out, ease-in-out; 
+	*/
+	-webkit-transform: scale(1, 1);
     -webkit-transform-origin: 50% 50%;
     -webkit-transition: -webkit-transform-origin 0.1s ease-out, -webkit-transform 0.1s ease-out;
     -webkit-transition-property: -webkit-transform-origin, -webkit-transform;
     -webkit-transition-duration: 0.3s, 0.3s;
     -webkit-transition-timing-function: ease-out, ease-out;
-    -webkit-transition-delay: initial, initial;	
+    -webkit-transition-delay: initial, initial;		
 }
-
-.player-out .hover .scrubber .ui-slider-handle, .player-out.play-state .scrubber .ui-slider-handle, .player-out.start-state .scrubber .ui-slider-handle {
+.player-out .hover .playHead {
 	-webkit-transform: scale(0, 0);
 }
 .volumeControl {
@@ -573,6 +570,7 @@
 .largePlayBtn {
 	background: rgba(34,34,34,0.8);
 	color: #efefef;	
+	pointer-events: none;
 }
 .largePlayBtn:hover {
 	background: rgba(0,0,0,1);
@@ -593,7 +591,7 @@
 	background-size: 10px 10px;
 }
 .scrubber.disabled .buffered, 
-.scrubber.disabled .ui-slider-handle { 
+.scrubber.disabled .playHead { 
 	display: none; 
 }
 .watched {
@@ -610,7 +608,7 @@
 	background-image: repeating-linear-gradient(-45deg, rgba(255,255,255, 0.5), rgba(255,255,255, 0.5) 1px, transparent 1px, transparent 6px);
 	background-size: 8px 8px;
 }
-.scrubber .ui-slider-handle {
+.scrubber .playHead {
 	background-color: #dadada;
 	/*
 	background-repeat: repeat-x;
@@ -626,7 +624,7 @@
 	box-shadow:         0px 1px 0px rgba(0, 0, 0, 0.3);
 	border: 1px solid #fff;*/
 }
-.scrubber .ui-slider-handle:hover {
+.scrubber .playHead:hover {
 	border-color: #fff;
 	box-shadow: 0 1px 30px rgba(255, 255, 255, 1);
     -webkit-box-shadow: 0 1px 30px rgba(255, 255, 255, 1); 
